--- a/index.html
+++ b/index.html
@@ -174,21 +174,7 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-10">
                         <div class="team-active">
-                            <div class="single-team">
-                                <div class="team-img">
-                                    <img src="assets/img/gallery/zichong_1.jpg" alt="">
-                                    <!-- Blog Social -->
-                                    <div class="team-social">
-                                        <ul>
-                                            <li><a href="https://lavinwong.github.io/"><i class="fas fa-globe"></i></a></li>
-                                        </ul>
-                                    </div>
-                                </div>
-                                <div class="team-caption">
-                                    <h3><a href="https://lavinwong.github.io/">Zichong Wang</a></h3>
-                                    <p>Ph.D. Candidate <span>@FIU</span></p>
-                                </div>
-                            </div>
+
                             <div class="single-team">
                                 <div class="team-img">
                                     <img src="assets/img/gallery/archer.png" alt="">
@@ -201,7 +187,22 @@
                                 </div>
                                 <div class="team-caption">
                                     <h3><a href="https://www.linkedin.com/in/archer-amon-a9ba74259/">Archer Amon</a></h3>
-                                    <p>Graduate Student <span>@FIU</span></p>
+                                    <p><span>@Florida International University</span></p>
+                                </div>
+                            </div>
+                            <div class="single-team">
+                                <div class="team-img">
+                                    <img src="assets/img/gallery/zichong_1.jpg" alt="">
+                                    <!-- Blog Social -->
+                                    <div class="team-social">
+                                        <ul>
+                                            <li><a href="https://lavinwong.github.io/"><i class="fas fa-globe"></i></a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="team-caption">
+                                    <h3><a href="https://lavinwong.github.io/">Zichong Wang</a></h3>
+                                    <p><span>@Florida International University</span></p>
                                 </div>
                             </div>
                             <div class="single-team">
@@ -216,7 +217,7 @@
                                 </div>
                                 <div class="team-caption">
                                     <h3><a href="https://zhipengy.com/">Zhipeng Yin</a></h3>
-                                    <p>Ph.D. Student <span>@FIU</span></p>
+                                    <p><span>@Florida International University</span></p>
                                 </div>
                             </div>
                             <div class="single-team">
@@ -232,7 +233,7 @@
                                 </div>
                                 <div class="team-caption">
                                     <h3><a href="https://users.cs.fiu.edu/~wbzhang/">Wenbin Zhang</a></h3>
-                                    <p>Assistant Professor <span>@FIU</span></p>
+                                    <p><span>@Florida International University</span></p>
                                 </div>
                             </div>
                         </div>
