--- a/speakers.html
+++ b/speakers.html
@@ -88,23 +88,7 @@
         <section class="team-area section-padding">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-4">
-                        <div class="single-team mb-40">
-                            <div class="team-img">
-                                <img src="assets/img/gallery/zichong_1.jpg" alt="">
-                                <!-- Blog Social -->
-                                <div class="team-social">
-                                    <ul>
-                                        <li><a href="https://lavinwong.github.io/"><i class="fas fa-globe"></i></a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="team-caption">
-                                <h3><a href="#">Zichong Wang</a></h3>
-                                <p>Ph.D. Candidate <span>@FIU</span></p>
-                            </div>
-                        </div>
-                    </div>
+
                     <div class="col-lg-4">
                         <div class="single-team mb-40">
                             <div class="team-img">
@@ -118,7 +102,24 @@
                             </div>
                             <div class="team-caption">
                                 <h3><a href="https://www.linkedin.com/in/archer-amon-a9ba74259/">Archer Amon</a></h3>
-                                <p>Graduate Student <span>@FIU</span></p>
+                                <p><span>@Florida International University</span></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="single-team mb-40">
+                            <div class="team-img">
+                                <img src="assets/img/gallery/zichong_1.jpg" alt="">
+                                <!-- Blog Social -->
+                                <div class="team-social">
+                                    <ul>
+                                        <li><a href="https://lavinwong.github.io/"><i class="fas fa-globe"></i></a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="team-caption">
+                                <h3><a href="#">Zichong Wang</a></h3>
+                                <p><span>@Florida International University</span></p>
                             </div>
                         </div>
                     </div>
@@ -135,7 +136,7 @@
                             </div>
                             <div class="team-caption">
                                 <h3><a href="https://zhipengy.com/">Zhipeng Yin</a></h3>
-                                <p>Ph.D. Student <span>@FIU</span></p>
+                                <p><span>@Florida International University</span></p>
                             </div>
                         </div>
                     </div>
@@ -152,7 +153,7 @@
                             </div>
                             <div class="team-caption">
                                 <h3><a href="https://users.cs.fiu.edu/~wbzhang/">Wenbin Zhang</a></h3>
-                                <p>Assistant Professor <span>@FIU</span></p>
+                                <p><span>@Florida International University</span></p>
                             </div>
                         </div>
                     </div>
